rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_t_t505_1994_FOD-DAPSpecification.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_t_t505_1994_FOD-DAPSpecification.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod fod_dapspecification {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(identifier = "Appl-Comm-Encoding")]
    pub struct ApplCommEncoding {
        #[rasn(tag(context, 0), identifier = "constraint-name")]
        pub constraint_name: Option<PrintableString>,
        #[rasn(tag(context, 1), identifier = "external-data")]
        pub external_data: Option<OctetString>,
    }
    impl ApplCommEncoding {
        pub fn new(
            constraint_name: Option<PrintableString>,
            external_data: Option<OctetString>,
        ) -> Self {
            Self {
                constraint_name,
                external_data,
            }
        }
    }
}
